crates/math-core/tests/snapshots/error_test__tag_in_aligned.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{aligned}\\tag{32}1\\end{aligned}"
---
Error: Found "\tag", which may only appear in a numbered equation environment.
   ╭─[ <input>:1:16 ]
   │
 1 │ \begin{aligned}\tag{32}1\end{aligned}
   │                ──┬─  
   │                  ╰─── cannot be used here
───╯
